--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
+<body class="full">
+    <div class="main">
+        <h1 class="odin">Odin Recipes</h1>
 
-    <a href="recipes/pesto-pizza.html">Pesto Pizza</a>
-    <a href="recipes/ravioli.html">Ravioli</a>
-    <a href="recipes/taco.html">Taco</a>
+        <a href="recipes/pesto-pizza.html">Pesto Pizza</a>
+        <a href="recipes/ravioli.html">Ravioli</a>
+        <a href="recipes/taco.html">Taco</a>
+    </div>
 </body>
 </html>
