--- a/recipes/ravioli.html
+++ b/recipes/ravioli.html
@@ -5,24 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ravioli</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
-    <h1>Ravioli</h1>
-    <img src=https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F9%2F2013%2F12%2F06%2F201010-xl-easy-ravioli-2000.jpg&q=60 width="650" height="500" alt="Ravioli">
+<body class="done">
+    <div class="top">
+        <div>
+            <h1>Ravioli</h1>
+            <img src=https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F9%2F2013%2F12%2F06%2F201010-xl-easy-ravioli-2000.jpg&q=60 width="650" height="500" alt="Ravioli">
+        </div>
+        <div class="one">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>2 cups all-purpose flour, or as needed</li>
+                <li>2 eggs</li>
+                <li>1 cup ricotta cheese</li>
+                <li>½ cup shredded mozzarella cheese</li>
+                <li>¼ cup grated Parmesan cheese</li>
+                <li>1 cup water</li>
+                <li>1 eggs</li>
+            </ul>
+        </div>
+    </div>
     <p>Ravioli are a type of pasta comprising a filling enveloped in thin pasta dough. 
         Usually served in broth or with a sauce, they originated as a traditional food in Italian cuisine. 
         Ravioli are commonly square, though other forms are also used, including circular and semi-circular.</p>
-
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 cups all-purpose flour, or as needed</li>
-        <li>2 eggs</li>
-        <li>1 cup ricotta cheese</li>
-        <li>½ cup shredded mozzarella cheese</li>
-        <li>¼ cup grated Parmesan cheese</li>
-        <li>1 cup water</li>
-        <li>1 eggs</li>
-    </ul>
 
     <h2>Directions</h2>
     <ol>
