--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -5,21 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taco</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
-<body>
-    <h1>Taco</h1>
-    <img src=https://www.tacobell.com/_static/web/images/loyalty/side-overlay-2022-E01-Rewards-Doritos-Locos-Tacos-W.png width="650" height="500" alt="Taco">
+<body class="done">
+    <div class="top">
+        <div>
+            <h1>Taco</h1>
+            <img src=https://www.tacobell.com/_static/web/images/loyalty/side-overlay-2022-E01-Rewards-Doritos-Locos-Tacos-W.png width="650" height="500" alt="Taco">
+        </div>
+        <div class="one">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>2 pounds ground beef</li>
+                <li>1 (14.5 ounce) carton Campbell's® Mexican Style Tomato Soup</li>
+                <li>12 taco shells, warmed</li>
+                <li>¾ cup shredded lettuce</li>
+                <li>⅓ cup shredded Cheddar cheese</li>
+                <li>¾ cup diced tomato</li>
+            </ul>
+        </div>
+    </div>
     <p>A taco is a traditional Mexican food consisting of a small hand-sized corn- or wheat-based tortilla topped with a filling. The tortilla is then folded around the filling and eaten by hand.</p>
-
-    <h2>Ingredients</h2>
-    <ul>
-        <li>2 pounds ground beef</li>
-        <li>1 (14.5 ounce) carton Campbell's® Mexican Style Tomato Soup</li>
-        <li>12 taco shells, warmed</li>
-        <li>¾ cup shredded lettuce</li>
-        <li>⅓ cup shredded Cheddar cheese</li>
-        <li>¾ cup diced tomato</li>
-    </ul>
 
     <h2>Directions</h2>
     <ol>
